Update Logistic Regression using Python.ipynb

--- a/Logistic Regression using Python.ipynb
+++ b/Logistic Regression using Python.ipynb
@@ -152,7 +152,7 @@
     "import numpy as np\n",
     "import statsmodels.formula.api as smf\n",
     "\n",
-    "df = pd.read_csv(\"C:/Users/avillan/Documents/Varios/Personal/Teaching Assistant Position/Logistic Regression Class/Logistic Regression Data Sets/Dengue.csv\")\n",
+    "df = pd.read_csv(\"C:/Documents/Dengue.csv\")\n",
     "\n",
     "## Converting variable to categorical data type (since that what it is)\n",
     "## and then creating dummy variables\n",
