Update Logistic Regression using Python.ipynb

--- a/Logistic Regression using Python.ipynb
+++ b/Logistic Regression using Python.ipynb
@@ -429,7 +429,7 @@
     }
    ],
    "source": [
-    "df_v = pd.read_csv(\"C:/Users/avillan/Documents/Varios/Personal/Teaching Assistant Position/Logistic Regression Class/Logistic Regression Data Sets/Validation.csv\")\n",
+    "df_v = pd.read_csv(\"C:/Documents/Validation.csv\")\n",
     "\n",
     "df_v['country'] = df_v['country'].astype('category')\n",
     "df_v = pd.get_dummies(df_v)\n",
